--- a/custom-starter.css
+++ b/custom-starter.css
@@ -1,84 +1,63 @@
-html, body{
-    height: 100%;
-    
-    }
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'Rubik', sans-serif;
+    list-style: none;
+    text-decoration: none;
+}
 
+:root{
+    --bg-color: #1f1f21;
+    --text-color: #fff;
+    --main-color: #ffae00;
+
+    --big-font: 7rem;
+    --p-font: 1.1rem;
+
+}
 
 body {
+    background: var(--bg-color);
+    color: var(--text-color);
+    overflow-x:hidden ;
+}
+header{
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
     display: flex;
-    flex-direction: column;
-
+    align-items: center;
+    justify-content: space-between;
+    padding: 32px 15%;
+    background: transparent;
+    transition: all ease .45s; 
 }
 
-.navvy {
-    background-color: rgb(126, 218, 213);
+.logo{
+    color: var(--text-color);
+    font-size: 41px;
+    font-weight: 600;
 }
-.navbar-light,
-.navbar-toggler {
-    color: rgb(253, 0, 0);
-    border-color: rgb(241, 1, 1);
-
+.logo span{
+    color: var(--main-color);
 }
-
-.navbar-light,
-.navbar-toggler:hover {
-    color: rgb(240, 5, 5);
-    border-color: rgb(255, 1, 1);
-
-}
-header .navbar ul li a.active,
-  header .navbar ul li a:hover {
-    color: #011aff;
-    border-bottom: 0.2rem solid #011aff;
-    padding: 0.5rem 0;
-    transform: scale(1.1);}
-
-main{
-    flex:1 0 auto;
-}
-.detel{
-    margin: 15% 0 15% 8%;
-}
-.detel h1{
-    font-size: 50px;
-    color: #212122;
-    margin-bottom: 20px;
-}
-span{
-    color: Blue;
-}
-.detel p{
-    color: #5d5d5d;
-    line-height: 22px;
-}
-
-.images {
-    width: 45%;
-    height: 80%;
-    margin-bottom: 40px 0 40px 0;
-    position: absolute;
-    bottom: 0;
-    right: 100px;
+.navbar{
     display: flex;
-    flex-wrap: wrap;
 }
-.images img{
-    height: 100%;
-    position: absolute;
-    left: 50%;
-    bottom: 0;
-    transform: translateX(-50%);
-    transition: bottom 2s,left 1s;
+.navbar a{
+    font-size: var(--p-font);
+    font-weight: 500;
+    color: var(--text-color);
+    margin: 0 25px;
+    transition: all ease .50s;
 }
- 
-.images:hover .shape{
-    bottom: 40px;
-} 
-.images:hover .cutie{
-    left: 45%;
+.navbar a:hover{
+    color: var(--main-color);
 }
-.images .cutie{
-    border-radius: 50%;
+.navbar a:active{
+    color: var(--main-color);
 }
 footer {
     flex-shrink: 0;
