--- a/custom-starter.css
+++ b/custom-starter.css
@@ -205,7 +205,36 @@ footer a:hover {
 .card-body {
     border-radius: 0 0 8px 8px;
 }
-
+.share{
+    position: absolute;
+    bottom: 3rem;
+    left: 15%;
+    display: flex;
+    align-items: center;
+}
+.share p{
+    font-size: 17px;
+    color: var(--text-color);
+    margin-right: 25px ;
+}
+.social a{
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    height: 45px;
+    width: 45px;
+    background: linear-gradient(130.08deg, #383528 0%, #191919 100%);
+    box-shadow: 0px 20px 40px #00000070;
+    border: 1px solid #3b3b3b;
+    border-radius: 50%;
+    color: var(--text-color);
+    font-size: 20px;
+    margin: 0 7px;
+    transition: all 0.6s ease-in-out;
+}
+.social a:hover{
+    transform: translateY(-10px);
+}
 @media (max-width: 767.98px) {
     .color-overlay{
         min-height : 30vh;
